--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "antd": "^5.20.6",
+    "axios": "^1.7.7",
+    "brainless-token-manager": "^1.3.3",
+    "jotai": "^2.9.3",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.11",
+    "rc-util": "^5.43.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-toastify": "^10.0.5",
+    "use-intl": "^3.19.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11"
+    "eslint-config-next": "14.2.11",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
