--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "brainless-token-manager": "^1.3.3",
+    "i18next": "^23.15.1",
     "jotai": "^2.9.3",
     "js-cookie": "^3.0.5",
     "next": "14.2.11",
+    "next-i18next": "^15.3.1",
     "rc-util": "^5.43.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.2",
     "react-toastify": "^10.0.5",
     "use-intl": "^3.19.1"
   },
