--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "use-intl": "^3.19.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.12",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
